tests/badly_positioned_objassign/badly_positioned_objassign.exp
Error ----------------------------------------------------------------------------------------------------- test1.js:2:1

Incorrect arguments passed to call of method `assign` because string [1] is incompatible with number [2].

   test1.js:2:1
   2| Object.assign({ p: 0 }, new C);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test1.js:1:14
   1| class C { p: string };
                   ^^^^^^ [1]
   test1.js:2:20
   2| Object.assign({ p: 0 }, new C);
                         ^ [2]


Error ----------------------------------------------------------------------------------------------------- test2.js:3:7

Cannot spread `i` because property `p` is not readable.

   3| ({ ...i });
            ^


Error ---------------------------------------------------------------------------------------------------- test3.js:5:14

Cannot assign `x` to `a` because rest of object pattern [1] is incompatible with string [2].

   test3.js:5:14
   5| var {...a} = x;
                   ^

References:
   test3.js:5:6
   5| var {...a} = x;
           ^^^^ [1]
   test3.js:4:9
   4| var a : string;
              ^^^^^^ [2]



Found 3 errors
